include/wrapper.hpp

#include <string>

namespace RustyLibstark {
int hello_from_c();
// const char *gen_hello_c_str();
char *gen_hello_c_str();
char *getString();
char *gen_hello();
char *gen_witness();
} // namespace RustyLibstark