bindings.rs

/* automatically generated by rust-bindgen 0.65.1 */

#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod root {
    #[allow(unused_imports)]
    use self::super::root;
    pub mod std {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod __gnu_cxx {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod RustyLibstark {
        #[allow(unused_imports)]
        use self::super::super::root;
        extern "C" {
            #[link_name = "\u{1}_ZN13RustyLibstark12hello_from_cEv"]
            pub fn hello_from_c() -> ::std::os::raw::c_int;
        }
        extern "C" {
            #[link_name = "\u{1}_ZN13RustyLibstark15gen_hello_c_strEv"]
            pub fn gen_hello_c_str() -> *mut ::std::os::raw::c_char;
        }
        extern "C" {
            #[link_name = "\u{1}_ZN13RustyLibstark9getStringEv"]
            pub fn getString() -> *mut ::std::os::raw::c_char;
        }
        extern "C" {
            #[link_name = "\u{1}_ZN13RustyLibstark9gen_helloEv"]
            pub fn gen_hello() -> *mut ::std::os::raw::c_char;
        }
        extern "C" {
            #[link_name = "\u{1}_ZN13RustyLibstark11gen_witnessEv"]
            pub fn gen_witness() -> *mut ::std::os::raw::c_char;
        }
    }
}
